--- a/portfolio-sass-master/scss/main.css
+++ b/portfolio-sass-master/scss/main.css
@@ -10,18 +10,18 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
   background-size: cover;
 }
 .home__name {
-  font-size: 24px;
+  font-size: 5rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
-  border-bottom: 2px solid #ff652f;
+  border-bottom: 2px solid #fff;
 }
 .home__name--last {
   color: #ff652f;
   font-weight: 700;
-  font-size: 50px;
 }
 
 .menu-btn {
@@ -32,41 +32,37 @@
   height: 20px;
   width: 28px;
   cursor: pointer;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .menu-btn__burger {
-  content: " ";
   position: absolute;
   right: 0;
   top: 0.5rem;
-  width: 24px;
+  width: 28px;
   height: 3px;
-  border-radius: 5px;
   background: #fff;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .menu-btn__burger::before {
-  content: " ";
+  content: "";
   position: absolute;
   top: -8px;
   width: 28px;
   height: 3px;
-  border-radius: 5px;
   background: #fff;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .menu-btn__burger::after {
-  content: " ";
+  content: "";
   position: absolute;
   top: 8px;
   width: 20px;
   height: 3px;
-  border-radius: 5px;
   background: #fff;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .menu-btn__burger.open {
-  transform: rotate(90deg);
+  transform: rotate(720deg);
   background: transparent;
 }
 .menu-btn__burger.open::before {
@@ -99,14 +95,14 @@
   list-style-type: none;
   padding-right: 1rem;
   transform: translateY(-100%);
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .nav .menu-nav.open {
   transform: translateY(0);
 }
 .nav .menu-nav__item {
   transform: translateX(100vw);
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .nav .menu-nav__item.open {
   transform: translateX(0);
@@ -116,39 +112,39 @@
 }
 .nav .menu-nav__link {
   display: inline-block;
-  font-size: 18px;
+  font-size: 2rem;
   text-transform: uppercase;
-  padding: 20px 0;
-  font-weight: 400;
-  transition: all 0.2s ease-in-out;
+  padding: 2rem 0;
+  font-weight: 300;
+  transition: all 0.5s ease-in-out;
 }
 .nav .menu-nav__link:hover {
   color: #ff652f;
 }
 
 .menu-nav__item:nth-child(1) {
-  transition-delay: 0.3s;
+  transition-delay: 0.25s;
 }
 
 .menu-nav__item:nth-child(2) {
-  transition-delay: 0.4s;
+  transition-delay: 0.35s;
 }
 
 .menu-nav__item:nth-child(3) {
-  transition-delay: 0.5s;
+  transition-delay: 0.45s;
 }
 
 .menu-nav__item:nth-child(4) {
-  transition-delay: 0.6s;
+  transition-delay: 0.55s;
 }
 
 .about {
-  padding-bottom: 10px;
+  padding-bottom: 2rem;
 }
 .about__bio-image {
   height: 50vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(39, 39, 39, 0.8), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -156,7 +152,7 @@
   justify-content: flex-end;
 }
 .about__bio-image p {
-  margin-bottom: 10px;
+  margin-bottom: 2rem;
 }
 .about__bio {
   width: 80%;
@@ -166,7 +162,7 @@
   padding-bottom: 1rem;
 }
 .about .jobs {
-  width: 80vw;
+  width: 60vw;
   margin: 2rem auto 0 auto;
   display: grid;
   grid-template-columns: 1fr;
@@ -177,10 +173,10 @@
   padding: 0.5rem;
   border-bottom: 5px solid #ff652f;
 }
-.about .jobs h2, .about .jobs h3 {
+.about .jobs__job h2, .about .jobs__job h3 {
   margin: 0.5rem 0;
 }
-.about .jobs h6 {
+.about .jobs__job h6 {
   margin: 0.3rem 0;
 }
 .about .social-icons {
@@ -188,16 +184,16 @@
   flex-direction: column;
 }
 .about footer {
-  transform: rotate(90deg) translate(-2rem, -3rem);
+  transform: rotate(90deg) translate(-3rem, -5rem);
 }
 
 .projects {
-  padding-bottom: 10px;
+  padding-bottom: 2rem;
 }
 .projects__bio-image {
   height: 30vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(39, 39, 39, 0.8), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -209,7 +205,7 @@
   margin-bottom: 2rem;
 }
 .projects__items {
-  width: 80vw;
+  width: 60vw;
   margin: 2rem auto 0 auto;
   display: grid;
   grid-template-columns: 1fr;
@@ -233,17 +229,16 @@
   width: 100%;
   background: #ff652f;
   opacity: 0;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .projects__item:hover::after {
   top: 0;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 .projects__item:hover .projects__btn {
   opacity: 1;
 }
 .projects__btns {
-  content: "";
   position: absolute;
   top: 0;
   height: 100%;
@@ -257,7 +252,7 @@
 .projects__btn {
   opacity: 0;
   color: #000;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .projects__btn:hover {
   color: #fff;
@@ -267,7 +262,7 @@
   flex-direction: column;
 }
 .projects footer {
-  transform: rotate(90deg) translate(-2rem, -3rem);
+  transform: rotate(90deg) translate(-3rem, -5rem);
 }
 
 .contact {
@@ -277,17 +272,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
   background-size: cover;
-  font-size: 14px;
 }
 .contact h2 {
-  font-size: 24px;
-  margin-bottom: 24px;
+  font-size: 3rem;
+  margin-bottom: 2rem;
 }
 .contact__list {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 14px;
+  grid-gap: 2rem;
+  font-size: 1.5rem;
+}
+.contact .social-icons {
+  position: initial;
+  margin-top: 2rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -309,16 +309,19 @@
     padding-right: 1.5rem;
   }
   .nav .menu-nav__link {
-    font-size: 14px;
+    font-size: 1.5rem;
   }
   .about__bio {
-    font-size: 14px;
+    font-size: 1.5rem;
   }
   .projects__bio-image {
     height: 40vh;
   }
   .projects__items {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .projects .text-secondary {
+    font-size: 3rem;
   }
   .contact__list {
     grid-template-columns: repeat(2, 1fr);
@@ -343,7 +346,6 @@ body {
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1;
-  font-size: 13px;
 }
 
 h1, h2, h3 {
@@ -351,8 +353,8 @@ h1, h2, h3 {
 }
 
 a {
-  text-decoration: none;
   color: #fff;
+  text-decoration: none;
 }
 
 .text-secondary {
@@ -367,25 +369,24 @@ header {
 }
 
 main {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 main .social-icons {
   position: fixed;
   bottom: 1rem;
   left: 1rem;
-  font-size: 1rem;
 }
 main .social-icons a {
-  padding: 5px;
-  transition: all 0.2s ease-in-out;
+  padding: 0.4rem;
+  transition: all 0.5s ease-in-out;
 }
 main .social-icons a:hover {
   color: #ff652f;
 }
 
 footer {
-  font-size: 10px;
+  font-size: 1rem;
   position: fixed;
   bottom: 0.4rem;
   right: 1rem;
