--- a/portfolio-sass-master/scss/_config.scss
+++ b/portfolio-sass-master/scss/_config.scss
@@ -1,15 +1,5 @@
 $primary-color: #272727;
 $secondary-color: #ff652f;
-$accent-color: #ff652f;
-
-$background-color: #272727;
-$text-color: #ffffff;
-
-$font-weight: (
-  "regular": 400,
-  "medium": 500,
-  "bold": 700
-);
 
 * {
   box-sizing: border-box;
@@ -18,14 +8,15 @@ $font-weight: (
 }
 
 @mixin transition-ease {
-  transition: all .2s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 @function set-text-color($color) {
   @if (lightness($color) > 40%) {
     @return #000;
+  } @else {
+    @return #fff;
   }
-  @return #fff;
 }
 
 @mixin media-md {
@@ -33,13 +24,11 @@ $font-weight: (
     @content;
   }
 }
-
 @mixin media-lg {
   @media screen and (min-width: 1024px) {
     @content;
   }
 }
-
 @mixin media-xl {
   @media screen and (min-width: 1600px) {
     @content;
