--- a/portfolio-sass-master/scss/main.scss
+++ b/portfolio-sass-master/scss/main.scss
@@ -1,18 +1,17 @@
-@import "config";
-@import "home";
-@import "menu";
-@import "about";
-@import "projects";
-@import "contact";
-@import "responsive";
+@import 'config';
+@import 'home';
+@import 'menu';
+@import 'about';
+@import 'projects';
+@import 'contact';
+@import 'responsive';
 
 body {
-  background: $background-color;
+  background: $primary-color;
   color: set-text-color($primary-color);
   height: 100vh;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1;
-  font-size: 13px;
 }
 
 h1, h2, h3 {
@@ -20,8 +19,8 @@ h1, h2, h3 {
 }
 
 a {
-  text-decoration: none;
   color: set-text-color($primary-color);
+  text-decoration: none;
 }
 
 .text-secondary {
@@ -36,28 +35,27 @@ header {
 }
 
 main {
-  width: 100%;
   height: 100%;
+  width: 100%;
 
   .social-icons {
     position: fixed;
     bottom: 1rem;
     left: 1rem;
-    font-size: 1rem;
 
     a {
-      padding: 5px;
+      padding: 0.4rem;
       @include transition-ease;
 
       &:hover {
-        color: $accent-color;
+        color: $secondary-color;
       }
     }
   }
 }
 
 footer {
-  font-size: 10px;
+  font-size: 1rem;
   position: fixed;
   bottom: 0.4rem;
   right: 1rem;
