--- a/portfolio/scss/_home.scss
+++ b/portfolio/scss/_home.scss
@@ -4,13 +4,13 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
-  background: linear-gradient(to right, rgba($primary-color, 0.8), rgba($primary-color, 0.3)), url('../img/model-1.jpg') center top;
+  // background: linear-gradient(to right, rgba($primary-color, 0.8), rgba($primary-color, 0.3)), url('../img/model-1.jpg') center top;
   background-size: cover;
 
   &__name {
     font-size: 24px;
     padding-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
     border-bottom: 2px solid $accent-color;
 
     &--last {
